# sense-cli

./: .env.example  .gitignore  README.md  README_ROLE_SYSTEM.md  dump.rdb  pyproject.toml  verify_monitor_system.py
config/: mcp_config.json  ollama-example.yaml  settings.example.yaml  triggers.example.yaml  triggers.yaml
config/roles/: assistant.yaml  fundamental_analyst.yaml  it_support.yaml  sentiment_trader.yaml  technical_analyst.yaml  trend_trader.yaml
docs/: HUMAN_IN_THE_LOOP.md  human_loop_architecture.md
examples/: human_loop_config.py  human_loop_demo.py
prompts/: philosopher.yaml  planner.xml  react_core.xml  scientist.yaml  storyteller.yaml  summarizer.xml  synthesizer.xml
scripts/: check_config.py
src/stock_cli/: __init__.py  cli.py  main.py
src/stock_cli/agent/: __init__.py  events.py  human_loop.py  kernel.py  response_parser.py  runtime.py  strategies.py  task_executor.py  task_manager.py  tool_executor.py  xml_filter.py
src/stock_cli/commands/: __init__.py  ask.py  chat.py  rag.py  role.py  tools.py  trigger.py  version.py
src/stock_cli/core/: __init__.py  app_state.py  cli_handler.py  cli_session.py  config_resolver.py  context.py  interaction.py  llm_provider.py  monitor_manager.py  prompt_loader.py  rag.py  role_manager.py  session.py  session_lock.py  session_manager.py  signal_manager.py  types.py
src/stock_cli/data/: __init__.py  cache_store.py  market_data.py  market_provider.py  stock_data.py  system_monitor.py
src/stock_cli/logs/: logger.py
src/stock_cli/monitors/: __init__.py  desktop_file_monitor.py  (+5 more)
stock_cli/: cli.py
(+33 files in other folders)
